[package]
name = "rdf-canon"
authors = ["yamdan"]
version = "0.15.3"
edition = "2021"
description = "A Rust implementation of the RDF Dataset Canonicalization algorithm version 1.0 (RDFC-1.0) compatible with Oxigraph and Oxrdf."
homepage = "https://github.com/zkp-ld/rdf-canon"
repository = "https://github.com/zkp-ld/rdf-canon"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2", features = ["alloc"] }
digest = "0.10"
itertools = "0.14"
oxrdf = "0.2.4"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
chrono = "0.4"
oxttl = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
log = ["tracing-subscriber"]
earl-reporting = []
